<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fragment_register_main_text" />

    <EditText
        android:id="@+id/fragment_register_new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Email"
        android:hint="@string/fragment_welcome_user_email"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/fragment_register_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:hint="@string/fragment_welcome_user_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/fragment_register_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fragment_register_button" />
</LinearLayout>